closes #32 - Improved provider score algorithm